[package]
authors = ["James B <fpga@atlantixeng.com>"]
edition = "2018"
name = "elerons"
version = "0.1.0"
[dependencies]
anyhow = "1.0"
graphql_client = "0.10.0"
prettytable-rs = "0.8"
regex = "*"
serde = "^1.0"
serde_json = "1.0.64"
sprintf = "*"
structopt = "0.3.21"
substring = "1.4.5"

[dependencies.const_format]
version = "0.2.13"

[dependencies.reqwest]
features = ["json", "blocking"]
version = "0.11.3"
